--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "debug": "^3.1.0",
+    "filestack-js": "^0.11.4",
+    "lodash": "^4.17.10",
+    "pdfjs-dist": "^2.0.489",
     "vue": "^2.5.16"
   },
   "devDependencies": {
