--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "eslint-plugin-prettier": "^2.6.0",
     "vue-svg-loader": "^0.5.0",
     "vue-template-compiler": "^2.5.16"
   },
