--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - build
+      - build:
           filters:
             branches:
               ignore: gh-pages
