--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "debug": "^3.1.0",
+    "debug": "^3.2.6",
     "filestack-js": "^0.11.4",
-    "lodash": "^4.17.10",
-    "pdfjs-dist": "^2.0.489",
-    "vue": "^2.5.16"
+    "lodash": "^4.17.11",
+    "pdfjs-dist": "^2.0.943",
+    "vue": "^2.6.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
     "eslint-plugin-prettier": "^2.6.0",
     "vue-svg-loader": "^0.5.0",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.6.3"
   },
   "babel": {
     "presets": [
