Use intersection-observer polyfill for wider cross-browser support

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "debug": "^3.2.6",
     "filestack-js": "^0.11.4",
+    "intersection-observer": "^0.5.1",
     "lodash": "^4.17.11",
     "pdfjs-dist": "^2.0.943",
     "vue": "^2.6.3"
